fcomUtil-R1-2-3: sonya (07/20/2016)
                  src/Makefile: Filter out all linux-x86 architectures when
		        building pv2fcid IOC

fcomUtil-R1-2-2: carolina (07/13/2016)
                  Built against fcom-R1-3-35 as I need udpComm-R2-5-9-BR-3
			As it required for event-R4-2-5
		  And exclude pv2fcid for Linux-x86 to build in epics base 14-12.

fcomUtil-R1-1-37: bhill (06/11/2016)
                  Built against fcom-R1-3-32 as I need udpComm-R2-7-0
				  Blob send part of drvFcom implemented and working.
				  Still need to implement receive blob support.  i.e. fcomGetBlobSet()"

fcomUtil-R1-1-36: scondam (06/10/2016)
                  Build against fcom-R1-3-33 which uses udpComm-R2-5-9-BR-2
				  
fcomUtil-R1-1-34: khkim (12/02/2015)
                  Build against fcom-R1-3-31

fcomUtil-R1-1-33: khkim (11/13/2015)
                  Build against fcom-R1-3-30

fcomUtil-R1-1-32: bhill (09/04/2015)
                  Build against fcom-R1-3-29
				  
fcomUtil-R1-1-31: scondam (02/19/2015)
                  Build against fcom-R1-3-28
				  
fcomUtil-R1-1-30: kim (01/15/2015)
                  Build against fcom-R1-3-27

fcomUtil-R1-1-29: scondam (11/11/2014)
                  fcomUtil.c -  Added "FB05" to end of 	area_ca[]
								Bumped up MAX_AREAS to 25.
				  fcomUtil.h -  Added FCOM_MASK_AREA_FB05
				  
fcomUtil-R1-1-28: scondam (11/11/2014)
                  Build with fcom-R1-3-26
				  
fcomUtil-R1-1-27: luchini (04/15/2014)
                  Build against fcom-R1-3-25 with event-R4-1-1

fcomUtil-R1-1-26: lpiccoli (02/20/2014)
                  Build against fcom-R1-3-24 (with updated event module: event-R4-1-0)

fcomUtil-R1-1-25: Re-build against fcom-R1-3-23 for the general audience
                  Shantha Condamoor: 27-Feb-2014
fcomUtil-R1-1-24: Build against fcom-R1-3-21
                  Shantha Condamoor: 27-Feb-2014
				  For llrf6 which does not use fcom-R1-3-23
				  Add TCAV to detector list.