@@ -36,7 +36,7 @@ EPICS_MODULES=$(MODULES_SITE_TOP)
 # the appropriate version dependencies
 # http://www-group.slac.stanford.edu/cdsoft/epics/swModules3.htm
 # ===============================================================
-FCOM_MODULE_VERSION=fcom-R1-3-34
+FCOM_MODULE_VERSION=fcom-R1-3-35-BR-1
 MISCUTILS_MODULE_VERSION=miscUtils-R2-2-3
 
 # ============================================================
