@@ -80,21 +80,25 @@ extern "C" {
 #define FCOM_MASK_AREA_LI28              ((unsigned long)0x00000009)
 #define FCOM_MASK_AREA_LI29              ((unsigned long)0x0000000A)
 #define FCOM_MASK_AREA_LI30              ((unsigned long)0x0000000B)
-#define FCOM_MASK_AREA_BSY1              ((unsigned long)0x0000000C)
-#define FCOM_MASK_AREA_LTU0              ((unsigned long)0x0000000D)
-#define FCOM_MASK_AREA_LTU1              ((unsigned long)0x0000000E)
-#define FCOM_MASK_AREA_UND1              ((unsigned long)0x0000000F)
-#define FCOM_MASK_AREA_DMP1              ((unsigned long)0x00000010)
-#define FCOM_MASK_AREA_FEE1              ((unsigned long)0x00000011)
-#define FCOM_MASK_AREA_NEH1              ((unsigned long)0x00000012)
-#define FCOM_MASK_AREA_FEH1              ((unsigned long)0x00000013)
-#define FCOM_MASK_AREA_FB01              ((unsigned long)0x00000014)
-#define FCOM_MASK_AREA_FB02              ((unsigned long)0x00000015)
-#define FCOM_MASK_AREA_FB03              ((unsigned long)0x00000016)
-#define FCOM_MASK_AREA_FB04              ((unsigned long)0x00000017)
-#define FCOM_MASK_AREA_BSY0              ((unsigned long)0x00000018)
-#define FCOM_MASK_AREA_FB05              ((unsigned long)0x00000019)
-
+#define FCOM_MASK_AREA_BSYH              ((unsigned long)0x0000000C)
+#define FCOM_MASK_AREA_CLTH              ((unsigned long)0x0000000D)
+#define FCOM_MASK_AREA_LTUH              ((unsigned long)0x0000000E)
+#define FCOM_MASK_AREA_UNDH              ((unsigned long)0x0000000F)
+#define FCOM_MASK_AREA_DMPH              ((unsigned long)0x00000010)
+#define FCOM_MASK_AREA_FEEH              ((unsigned long)0x00000011)
+#define FCOM_MASK_AREA_BSYS              ((unsigned long)0x00000012)
+#define FCOM_MASK_AREA_CLTS              ((unsigned long)0x00000013)
+#define FCOM_MASK_AREA_LTUS              ((unsigned long)0x00000014)
+#define FCOM_MASK_AREA_UNDS              ((unsigned long)0x00000015)
+#define FCOM_MASK_AREA_DMPS              ((unsigned long)0x00000016)
+#define FCOM_MASK_AREA_FEES              ((unsigned long)0x00000017)
+#define FCOM_MASK_AREA_NEH1              ((unsigned long)0x00000018)
+#define FCOM_MASK_AREA_FEH1              ((unsigned long)0x00000019)
+#define FCOM_MASK_AREA_FB01              ((unsigned long)0x0000001A)  
+#define FCOM_MASK_AREA_FB02              ((unsigned long)0x0000001B)
+#define FCOM_MASK_AREA_FB03              ((unsigned long)0x0000001C)
+#define FCOM_MASK_AREA_FB04              ((unsigned long)0x0000001D)
+#define FCOM_MASK_AREA_FB05              ((unsigned long)0x0000001E)
 /* Detectors SID is
 unit # - up 9999 decimal = 0x270F hex = 14 bits       */
 /*******************************************************************************************/
